frontend/static/css/yourworld.css
* {
	margin: 0;
	padding: 0;
}
html, body {
	overflow: hidden;
	width: 100%;
	height: 100%;
	overscroll-behavior: contain;
	touch-action: pan-down;
	-webkit-touch-callout: none;
}
#main_view {
	position: relative;
	overflow: hidden;
}
.screen_canvas {
	overflow: hidden;
	user-select: none;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
}
body {
	background: #ccc;
}
img {
	border: 0;
	text-decoration: none;
}
a,
a:link,
a:hover,
a:active,
a:visited {
	text-decoration: none;
	color: inherit;
}
.announce_text {
	text-align: center;
	margin-right: 3px;
	background-color: rgb(181 181 241);
	border-radius: 5px;
	color: #525252;
	padding-left: 7px;
	padding-right: 7px;
	font-weight: bold;
}
.announce_text > a {
	text-decoration: underline;
	color: blue;
}
.announce_text > a:hover {
	color: #f1d94a;
}
#topbar {
	position: absolute;
	top: 0;
	width: 100%;
}
#topbar_inner {
	width: 100%;
	position: absolute;
}
#announce_container {
	text-align: center;
}
.announce_close {
	font-size: 11px;
	font-weight: bold;
	color: #636060;
	background-color: #C5C2C2;
	border-radius: 2px;
	padding: 0 3px;
	position: relative;
	z-index: 1;
}
.announce_close:hover {
	background: #928E8E;
	color: white;
	cursor: pointer;
}
.ui {
	color: #888;
	font-family: Verdana;
	font-size: 12px;
	z-index: 100;
}
.ui-vis {
	background-color: rgba(0, 0, 255, .1);
	padding: 2px;
}
.tab {
	padding-top: 0;
	top: 0px;
	position: absolute;
}
.message {
	margin-left: auto;
	margin-right: auto;
	padding: 5px 0px;
	width: 60%;
	text-align: center;
	background: #E5E5FF;
	color: #333;
}
.message a {
	color: blue;
}
#loading {
	font-family: Verdana;
}
#coords {
	position: absolute;
	bottom: 0;
	right: 0;
	color: #555;
	background: #E5E5FF;
	cursor: pointer;
}
.menu {
	right: 0;
}
#menu {
	cursor: pointer;
}
#menu.hover {
	color: #555;
	background: #E5E5FF;
	border-left: 1px solid #ccc;
}
#nav {
	position: absolute;
	text-align: right;
	top: 1.5em;
	background: #E5E5FF;
	width: 8em;
	color: #555;
	border-left: 1px solid #ccc;
	border-bottom: 1px solid #ccc;
	overflow: hidden;
	max-height: 100%;
}
#nav li {
	display: block;
	list-style: none;
	position: relative;
	cursor: pointer;
	border-top: 1px solid #ccc;
}
#nav li:first-child {
	border-top: 0;
}
#nav a {
	display: block;
}
* html #nav ul {
	line-height: 0;
}
#nav li.hover {
	background-color: white;
}
#goto_submit {
	margin-left: 1em;
	margin-top: 3px;
}
#west_gui {
	position: absolute;
	top: 30px;
	left: 0px;
}
#protect_precision {
	background-color: #626262;
	color: white;
	padding: 4px;
	margin-bottom: 3px;
	display: inline-block;
}
#protect_selection {
	display: block;
	text-decoration: underline;
	color: white;
	text-align: center;
	cursor: pointer;
}
#protect_selection:hover {
	color: #F3DB65;
}
#protect_selection:active {
	color: #917c17;
}
#char_choice {
	margin-left: 14px;
}
.protect_button {
	border: solid 1px white;
	text-align: center;
	cursor: pointer;
	min-width: 40px;
	display: inline-block;
}
.auto_prog_panel {
	width: 150px;
	height: 30px;
	background-color: rgb(104, 104, 104);
	text-align: center;
	color: white;
}
#chat_open {
	position: absolute;
	bottom: 0px;
	left: 0px;
	width: 68px;
	text-align: center;
	height: 18px;
	cursor: default;
	display: flex;
	justify-content: center;
	align-items: center;
}
#chat_open:hover {
	background-color: #CCCCFF;
}
#chat_open:active {
	color: white;
	background-color: #B2B2FF;
}
#usr_online {
	padding-left: 16px;
	display: inline-block;
	cursor: default;
	user-select: none;
}
#chatsend {
	padding: 1px 6px 1px 6px;
}
.chat_tab_button {
	height: 20px;
	border: solid 1px #6c6c6c;
	border-radius: 2px;
	text-align: center;
	font-family: Verdana;
	font-size: 13px;
	cursor: default;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	margin-right: 3px;
}
.chat_tab_selected {
	background-color: #8C8C8C;
	color: white;
}
.chatfield {
	border: solid 1px #6c6c6c;
	border-radius: 2px;
	background-color: white;
	overflow: scroll;
	overflow-x: hidden;
	overflow-wrap: break-word;
	margin: 3px;
	margin-bottom: 0px;
	height: 100%;
	padding: 2px;
	contain: strict;
}
.chatfield > div {
	overflow: hidden;
}
.unread_bar {
	background-color: red;
	width: 100%;
	height: 2px;
	margin-top: 6px;
	margin-bottom: 6px;
	text-align: center;
}
.unread_bar_msg {
	background-color: white;
	position: relative;
	top: -8px;
	padding-left: 3px;
	padding-right: 3px;
	font-family: Verdana;
	font-size: 0.7em;
	color: red;
}
.unread {
	margin-left: 4px;
	color: red;
	font-size: 11px;
}
#total_unread {
	font-weight: bold;
	color: gray;
}
#chat_window {
	position: absolute;
	background-color: #e0e0e0;
	border: solid 1px #404040;
	border-radius: 2px;
	display: flex;
	flex-flow: column;
}
#chat_close {
	background-color: red;
	width: 20px;
	height: 20px;
	text-align: center;
	color: white;
	border: solid 1px #830000;
	border-radius: 2px;
	font-family: monospace;
	font-size: 16px;
	cursor: default;
	float: right;
}
#confirm_js {
	width: 441px;
	height: 256px;
	position: absolute;
	background-color: #dbdbdb;
	border-width: 2px;
	border-style: solid;
	border-color: black;
}
#confirm_js_code {
	background-color: #e6e6e6;
	position: absolute;
	width: 365px;
	height: 110px;
	top: 90px;
	left: 35px;
	padding: 3px;
	font-family: "Courier New", monospace;
	word-wrap: break-word;
	word-break: break-all;
	overflow: scroll;
	overflow-x: hidden;
}
#confirm_js_cancel {
	position: absolute;
	font-family: Helvetica;
	background-color: #7c7c7c;
	border-style: solid;
	width: 80px;
	height: 17px;
	top: 220px;
	left: 340px;
	border-width: 1px;
	padding: 2px;
	text-align: center;
	font-size: 15px;
	color: white;
	border-color: black;
	cursor: pointer;
}
#confirm_js_cancel_x {
	background-color: red;
	width: 20px;
	height: 20px;
	position: absolute;
	right: 3px;
	top: 2px;
	text-align: center;
	color: white;
	font-family: monospace;
	font-size: 16px;
	border-style: solid;
	border-width: 1px;
	border-color: black;
	cursor: pointer;
}
#confirm_js_msg {
	text-align: center;
	position: absolute;
	left: 20px;
	font-family: verdana;
	top: 40px;
}
#confirm_js_cancel:hover {
	background-color: #979797;
}
#run_js_confirm {
	position: absolute;
	color: blue;
	text-decoration: underline;
	top: 220px;
	left: 20px;
}
.region_selection {
	position: absolute;
	border: 1px solid black;
	pointer-events: none;
	box-sizing: border-box;
}
.mobile_selection_handle {
	width: 16px;
	height: 16px;
	border-radius: 50%;
	background-color: navy;
	position: absolute;
}
#area_results {
	width: 100%;
	height: 200px;
	white-space: pre;
	overflow: auto;
	overflow-x: scroll;
}
#link_element {
	position: absolute;
	display: block;
}
#owot {
	background-image: url("/static/unloaded.png");
	background-repeat: repeat;
}
#owot.nightmode {
	background-image: url("/static/unloaded_night.png");
}
#zoombar {
	width: 100%;
}
.color_btn {
	background-color: black;
	width: 16px;
	height: 16px;
	border-radius: 4px;
	border: solid 1px black;
	display: inline-block;
	font-weight: bold;
	font-family: verdana;
	text-align: center;
	cursor: default;
	font-size: 0.8em;
	overflow: hidden;
	margin: 3px;
	user-select: none;
	vertical-align: top;
}
.color_btn:hover {
	border-color: orange;
}
.color_btn:active {
	border-color: rgb(165, 107, 0);
}
#color_btn_no_cell {
	background: linear-gradient(to right top, white 47.75%, red 49.5%, red 55%, white 50%);
}
.modal_corner_checkbox_label {
	margin-left: 5px;
	user-select: none;
	white-space: nowrap;
}
#modal_overlay {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	cursor: default;
	background-color: rgba(0, 0, 0, 0.5);
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 1000;
}
.modal_close {
	position: absolute;
	right: 0px;
	bottom: 0px;
	margin-right: 8px;
	margin-bottom: 8px;
	color: blue;
	text-decoration: underline;
	cursor: pointer
}
.modal_frame {
	background-color: #C3C3FF;
}
.modal_client {
	background-color: #E5E5FF;
}
.modal-tab-btn {
	background-color: rgb(178 178 231);
}
.modal-tab-btn:hover {
	background-color: rgb(212 212 235);
}
.tooltip {
	position: absolute;
	top: 0px;
	left: 0px;
	background-color: #243030;
	color: white;
	font-family: Verdana, Arial;
	font-size: 0.8em;
	border: solid 1px #ff6363;
	padding: 4px 7px 4px 7px;
	pointer-events: none;
	max-width: 90%;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
.chat_emote {
	background: url(/static/emotes.png);
	background-size: auto 100%;
	height: 16px;
	vertical-align: middle;
	display: inline-block;
}
#erase_region {
	background-color: #E5E5FF;
	padding: 3px;
	margin-bottom: 3px;
	font-family: Verdana, Arial;
	font-size: 12px;
}
#erase_region_cancel {
	display: block;
	text-decoration: underline;
	color: blue;
	text-align: center;
	cursor: pointer;
}
#erase_region_cancel:hover {
	color: #F3DB65;
}
#erase_region_cancel:active {
	color: #917c17;
}
#text_decorations {
	background-color: #E5E5FF;
	padding: 3px;
	margin-bottom: 3px;
	display: inline-flex;
}
.text_deco_btn {
	width: 32px;
	height: 32px;
	text-align: center;
	display: inline-block;
	font-size: 28px;
	user-select: none;
	font-family: Arial, Verdana;
}
.text_deco_btn:hover {
	background-color: #CDCDFF;
}
#text_deco_b {
	font-weight: bold;
}
#text_deco_i {
	font-style: italic;
}
#text_deco_u {
	text-decoration: underline;
}
#text_deco_s {
	text-decoration: line-through;
}
.menuPin {
	width: 12px;
	height: 12px;
}
.longpress-container {
	width: 100%;
	position: absolute;
	bottom: 22px;
	text-align: center;
	pointer-events: none;
}
.longpress-options {
	background-color: #E5E5FF;
	padding: 5px;
	display: inline-block;
	pointer-events: auto;
	cursor: default;
	user-select: none;
}
.longpress-option {
	display: table-cell;
	color: black;
	padding: 5px;
	font-family: Verdana, Arial;
	vertical-align: middle;
	user-select: none;
}
.longpress-close {
	font-size: 2em;
}
.longpress-option:not(:last-child) {
	border-right: solid 1px #a7a7a7;
}
.longpress-option:active {
	background-color: #CDCDFF;
}

